--- a/video.html
+++ b/video.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <video src="./Gwen.mp4" autoplay controls></video>
+    <video src="./Gwen.mp4" autoplay controls style="width: 100%; height: 100%; object-fit: fill"></video>
 </body>
 
 </html>
